--- a/medical-frontend/package.json
+++ b/medical-frontend/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv-keywords": "^5.1.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
